adição do projeto + index.html + style.css

--- a/Agenda/src/main/webapp/index.html
+++ b/Agenda/src/main/webapp/index.html
@@ -3,9 +3,28 @@
 <head lang="pt-br">
 <meta charset="utf-8">
 <title>Agenda de Contatos</title>
+<link rel="icon" href="imagens/favicon.png">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Agenda de Contatos</h1>
-	<a href="#" >Acessar</a>
+	<div class="container">
+		<img alt="Imagem da agenda" src="imagens/agenda.png">
+		<h1>Agenda de Contatos</h1>
+		<a class="Botao1" href="main">Acessar</a>
+	</div>
+
+
+	<footer>
+		<hr>
+		<p>
+			Desenvolvido por: <a class="footerLink" target="_new" href="http://github.com/tadsgabrieltrindade">Gabriel
+				Trindade</a>
+		</p>
+		<p>
+			Curso: <a class="footerLink" target="_new"
+				href="https://youtube.com/playlist?list=PLbEOwbQR9lqz9AnwhrrOLz9cz1-TxoiUg">Java
+				Web - Prof. José de Assis</a>
+		</p>
+	</footer>
 </body>
 </html>
